# acai-gdev

./: .gitignore  CMakeLists.txt  README.md  build_gdev_build_test.sh  build_gdev_lib_arch64.sh  build_gdev_lib_arch64_cmake.sh  build_gdev_lib_global_x86.sh  build_gdev_lib_x86.sh  build_gdev_stub_arch64.sh
common/: gdev_nvidia_compute.c
cuda/: CMakeLists.txt  configure
cuda/driver/: device.c  execution.c  gdev_cuda.c
cuda/libucuda/: Makefile
cuda/runtime/: Makefile
cuda/runtime/hydrazine/: Makefile
cuda/runtime/hydrazine/implementation/: ELFFile.cpp
cuda/runtime/ocelot/: Makefile
cuda/runtime/ocelot/analysis/: Makefile
cuda/runtime/ocelot/api/: Makefile
cuda/runtime/ocelot/cuda/: Makefile
cuda/runtime/ocelot/executive/: Makefile
cuda/runtime/ocelot/ir/: Makefile
cuda/runtime/ocelot/parser/: Makefile
cuda/runtime/ocelot/transforms/: Makefile
lib/: CMakeLists.txt  configure
lib/kernel/: Makefile  gdev_lib.c
lib/user/gdev/: Makefile
lib/user/nouveau/: nouveau_gdev.c
mod/: .gitignore  CMakeLists.txt  load_driver.sh  test-cuda  test-rodinia
mod/gdev/: cca_benchmark.h  fh_kernel.c  fh_kernel.h  gdev_api_stub.c  gdev_device_stub.c  gdev_drv.c  gdev_drv.h  gdev_drv_nvidia.c  gdev_fops.c  gdev_interface.h  gdev_ioctl.c  gdev_proc.c
mod_stub/: build.sh  configure  test-fmadd  test-fmmul  test-madd
mod_stub/gdev/: Makefile  Makefile.bak  cuda_test  fmadd  fmmul  gdev_api.h  gdev_api_stub.c  gdev_conf.h  gdev_drv.c  gdev_drv.h  gdev_fops.c  gdev_interface.h  gdev_ioctl.c  gdev_ioctl.h  gdev_stub.mod.c  load_driver.sh  madd  run_test.sh  run_test_madd_host.sh
mod_stub/gdev/fh_kernel/: fh_def.h  fh_kernel.c  fh_kernel.h
test/cuda/user/: cuda_test
test/cuda/user/fmadd/: Makefile
test/cuda/user/fmmul/: Makefile  Makefile.fvp
test/cuda/user/madd/: Makefile  Makefile.fvp
test/cuda/user/madd_host/: Makefile
util/: gdev_platform.h
